--- a/gog.org
+++ b/gog.org
@@ -212,7 +212,7 @@ Verk was sure that he had covered this and was duly annoyed. He stared at the bo
 
 "Little rhino-buck, do you remember me talking about that? It's not known nor is it likely ever to be known. /Genuine/ historical research has come up empty so far I'm afraid. You're a clever lad. Have a seat, please."
 
-A girl in her late teens, that could only charitably be considered a child stood, /with some off-putting confidence/, Verk thought. /Likely a lovely child. Well shaped./
+A girl in her late teens, that could only charitably be considered a child stood /with some off-putting confidence/, Verk thought. /Likely a lovely child. Well shaped./
 
 "Father-Brother Verk," Verk thought she had rushed the whole name part. "Were there any other things we could have done to avoid all this dying, for everybody? Like..." She looked around. "could we just maybe get along with and share with the other tribe? After all, Nature has given us all this. Who has the claim?"
 
