--- a/gog.org
+++ b/gog.org
@@ -216,9 +216,9 @@ A girl in her late teens, that could only charitably be considered a child stood
 
 "Father-Brother Verk," Verk thought she had rushed the whole name part. "Were there any other things we could have done to avoid all this dying, for everybody? Like..." She looked around. "could we just maybe get along with and share with the other tribe? After all, Nature has given us all this. Who has the claim?"
 
-Verk knew that if he put his hand anywhere near his face it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think, for example.
+Verk knew that if he put his hand anywhere near his face it would, all by itself, gently cradle his forehead. He did not want to be unpleasant to the girl, but Verk's near exhausted patience with this Two-Squirrel-Hoard generation was getting to breaking point more and more all the time. /In a pitiful and disrespectful state, that lot/, he would often think for example.
 
-"Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives, in far too many cases."
+"Miss." He thought he would mix in just a dash of good-talking-to, as a signal to others as well. "I believe a lot of dedicated Forest Heroes put in a lot of blood, sweat, and dare I say lives in far too many cases."
 
 Noses tugged.
 
@@ -2146,6 +2146,7 @@ Everything is subject to change, eebureetang. But you'll have to re-title if we 
 
 ** Notes
 
+- If Verk gonna die, maybe he should die without ever revealing what he's so "put out" with Grav about.
 - If 'Gonk, Son of Blank' is a kind of hero, there should be place names that use both 'Gonk' and 'Blank'. Maybe Forestic things that come in pairs could use both: Two gigantic siege weapons (and only a pair, like 'fat man and little boy') can be named 'Gonk' and 'Blank'.
 - An explanation about "advanced vs caveman-stupid" contradictions.
   - How can they build that badass palace and not know to tie a vine to a rock.
