--- a/gog.org
+++ b/gog.org
@@ -53,14 +53,11 @@ The thick soot collected above the opening to the parlor-burrow were an especial
 
 Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
-yyy
+Fires make for a cozy cave and the current grand matriarch Nud, Zog's seventh and it would turn out final wife was the artful, watchful, and opinionated keeper of the fires. Having wrapped up the cleaning and dressing of the ancient-speak burrow's fire place, Nud was now working her way toward Grav, Son of Zog as she cleaned.
 
-Fires make for a cozy cave, and the current grand matriarch Nud, Zog's seventh and it would turn out final wife, was the artful, watchful, and opinionated keeper of the fires. Usually this /would/ have meant schlepping wood every late evening to the point of exhaustion, and only after this is done would the cleaning, arranging and lighting take place. No longer! Nud was more the managerial type.
+Grav was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
 
-
-Having wrapped up the cleaning and dressing of the largest fire in the cave system, Nud was now cleaning the whole ancient-speak burrow.
-
-She was currently shouting at Grav, Son of Zog, who was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable sit-ham-stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
+Out of the corner of his eye, Grav saw Nud's attention transition to him. He could feel the disapproval immediately. She opened her mouth as though preparing to speak.
 
 "I will move momentarily, /mother/. Father-Brother Verk is not even here yet."
 
@@ -244,9 +241,11 @@ One very small, sweet cavegirl tottered slightly as she stood, and made an exagg
 
 "Father-Brother Verk..." She had just a twist of endearing toddler speech, as she rolled her head self-consciously. She smiled broadly, proudly showing everyone that one rather large, prominent tooth had fallen out recently[fn:: They have a /sort/ of tooth fairy and it is complicated.].
 
-"Father-Brother Verk, why do people have to die?"
+"Faver-Brover Verk, why do people have to die?"
 
 There it was; a gem that Verk could work with.
+
+yyy
 
 "Sweet, sweet rhino-calf, please ...please come here." Verk was visibly moved.
 
