--- a/gog.org
+++ b/gog.org
@@ -45,7 +45,7 @@ The Zog clan, whom you will soon meet, live in such a cave. A nice cave, for sur
 
 The enormous irregular mound of red rock in which the Zog clan lived was at this point in time very much hollowed out. It was among the lighter mountains.
 
-The same family, all marriage and blood relations, all the way back to the times of Grut[fn:: The great], has continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name now has as much meaning to them as it does to you.
+The same family, all marriage and blood relations, all the way back to the time of Grut[fn:: The great], had continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name had as much meaning to them as it does to you.
 
 A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint", and it gave a place for the small-ones to scratch in their names and draw rock-sticks, with a hasty, pleasurable guilt, followed by a rapid retreat.
 
