--- a/gog.org
+++ b/gog.org
@@ -47,7 +47,7 @@ The enormous irregular mound of red rock in which the Zog clan lived was at this
 
 The same family, all marriage and blood relations, all the way back to the time of Grut[fn:: The great], had continuously occupied the inside of this hill, which was given the name Bhorv Zolk by some anonymous caveman long ago. The name had as much meaning to them as it does to you.
 
-A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint" and it gave a place for the small-ones to scratch in their names and draw rock-sticks with a hasty, pleasurable guilt[fn:: Followed always by a rapid retreat.].
+A hollowed out rock 167 men tall can be a cozy kind of place. The soot above the openings were in this case considered "quaint" and it gave a place for the small-ones to scratch in their names and draw rock-sticks with a hasty, pleasurable guilt[fn:: Followed always by a rapid retreat, and in the case of the smart ones, a quick wash of the telltale soot from hands, legs, feet, and usually just about everywhere.].
 
 The thick soot collected above the opening to the parlor-burrow were an especially large and at the current moment, an especially shameful bit of soot-palette. Grandsons Darcc and Dragg were currently hard at work with rhino soap and a basket of pine cones for scrubbing.
 
