--- a/gog.org
+++ b/gog.org
@@ -53,7 +53,7 @@ The thick soot collected above the opening to the parlor-burrow were an especial
 
 Sometimes it's a matter of who gets caught, but sometimes the club of justice falls true.
 
-Fires make for a cozy cave and the current grand matriarch Nud, Zog's seventh and it would turn out final wife was the artful, watchful, and opinionated keeper of the fires. Having wrapped up the cleaning and dressing of the ancient-speak burrow's fire place, Nud was now working her way toward Grav, Son of Zog as she cleaned.
+Fires make for a cozy cave and the current grand matriarch Nud[fn:: Zog's seventh and it would turn out final wife.] was the artful, watchful, and opinionated keeper of the fires. Having wrapped up the cleaning and dressing of the ancient-speak burrow's fire place, Nud was now working her way toward Grav, Son of Zog as she cleaned.
 
 Grav was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
 
