--- a/gog.org
+++ b/gog.org
@@ -55,7 +55,9 @@ Sometimes it's a matter of who gets caught, but sometimes the club of justice fa
 
 Fires make for a cozy cave and the current grand matriarch Nud[fn:: Zog's seventh and it would turn out final wife.] was the artful, watchful, and opinionated keeper of the fires. Having wrapped up the cleaning and dressing of the ancient-speak burrow's fire place, Nud was now working her way toward Grav, Son of Zog as she cleaned.
 
-Grav was taking a well-earned rest in the ancient-speak burrow, sitting on what was agreed by all to be the most comfortable stone. It had several polished areas to prove its merit. Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point, among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
+Grav was taking a well-earned rest in the ancient-speak burrow sitting on what was agreed by all to be the most comfortable stone. It had several polished areas to prove its merit. Whether it had been found more or less in the current shape, created by some ancient caveman's hands, had been worn in this way by generations of use /or/ some combination of the three, it really knew all his cures and folds. It was remarkably comfortable.
+
+Grav was staring at an upside-down river of smoke that gently flowed in its bed of soot, making its way to the /highest/ point among all the inverted valleys, cliffs and mesas. Grav was ignoring Nud.
 
 Out of the corner of his eye, Grav saw Nud's attention transition to him. He could feel the disapproval immediately. She opened her mouth as though preparing to speak.
 
