--- a/gog.org
+++ b/gog.org
@@ -245,6 +245,8 @@ One very small, sweet cavegirl tottered slightly as she stood, and made an exagg
 
 "Faver-Brover Verk, why do people have to die?"
 
+# yyy
+
 There it was; a gem that Verk could work with.
 
 "Sweet, sweet rhino-calf, please ...please come here." Verk was visibly moved.
