--- a/gog.org
+++ b/gog.org
@@ -251,7 +251,7 @@ There it was; a gem that Verk could work with.
 
 "Sweet, sweet rhino-calf, please ...please come here." Verk was visibly moved.
 
-The girl tottered towards Verk, as he sat smiling in his fine stone throne. Half way there, Verk, with unbelievable slowness, began to raise his arms to receive the girl. His smile slowly broadening with similar uncanny slowness.
+The girl tottered towards Verk as he sat smiling in his fine stone throne. Half way there, Verk, with unbelievable slowness, began to raise his arms to receive the girl. His smile slowly broadening with similar uncanny slowness.
 
 The girl gave a little hop as Verk's arms, met with precision by the girl's underarms, lifted elegantly, rotated and plopped her in his lap.
 
@@ -259,7 +259,7 @@ He made a gesture of caressing his heart and nodding his head slowly with a smil
 
 "Sweet rhino-calf, what a precious question you ask. Can you say it again, real loudly so everyone can hear your question?"
 
-The girl perked up, faced the audience, with hands cupped around her mouth, and in exaggerated toddler fashion screamed impossibly loudly in the echoey burrow.
+The girl perked up, faced the audience, with hands cupped around her mouth, faced the audience and in exaggerated toddler fashion screamed the words in the echoey burrow.
 
 "WHY DO PEOPLE HAVE TO DIE?"
 
@@ -273,7 +273,7 @@ He began to pace back and forth on his large dais.
 
 He paced almost athletically, making sharp, possibly "military" about-faces at each end of the dais. His now slightly pinker face was facing the floor at a fixed angle.
 
-Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time, in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
+Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[fn:: Aside from being cute and a good way to express one's impressions when encountering something "dear", the /hide/ of a rhino calf was exactly the right combination, if slaughtered at the right time and in the right way, of supple, tough, and long-wearing. It made a perfect armor and, as it is comfortable, found its way into the "ceremonial" wardrobe of many admired cavemen, actual solders and otherwise.] skin ceremonial uniform with dignity and began.
 
 #+begin_quote
 My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that fierce pride and unashamed love for this community of humble, hard working, honest men and baby-makers[fn:: For this is what they called women, using the literal words, one following the other.].
