--- a/gog.org
+++ b/gog.org
@@ -278,7 +278,7 @@ Suddenly he stopped in front of the throne, stiffened, adjusted his rhino-calf[f
 #+begin_quote
 My admirable audience, men have to die because other men /are bad/! And that is it. Showing softness of any kind toward your /enemy/ is a big mistake. Once your enemy, always your enemy. Some things are not forgivable, and it is /essential/ that we as a Forest stick together and maintain that fierce pride and unashamed love for this community of humble, hard working, honest men and baby-makers[fn:: This is the Crec word for 'women', transliterated.].
 
-/*It is essential*/
+/*It is essential!*/
 #+end_quote
 
 Verk's voice cracked such that for the remainder of his speech he was noticeably hoarse.
@@ -286,7 +286,7 @@ Verk's voice cracked such that for the remainder of his speech he was noticeably
 #+begin_quote
 It is for the Love of The Forest that my being is filled with this unstoppable surety that right will ultimately triumph. Right will ultimately triumph.
 
-And the things that the /Clorp/ have /caused to come to pass/ sting less with every generation, but its unforgivable nature is eternal. Know that. Remember that. If you are Forgetting, you are betraying your Forest. Forgetting is /treason/!
+And the things that the /Clorp/ have /caused to come to pass/ sting less with every generation but its unforgivable nature is eternal. Know that. Remember that. If you are Forgetting, you are betraying your Forest. Forgetting is /treason/!
 #+end_quote
 
 Verk let that sink in, while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
