--- a/gog.org
+++ b/gog.org
@@ -289,13 +289,13 @@ It is for the Love of The Forest that my being is filled with this unstoppable s
 And the things that the /Clorp/ have /caused to come to pass/ sting less with every generation but its unforgivable nature is eternal. Know that. Remember that. If you are Forgetting, you are betraying your Forest. Forgetting is /treason/!
 #+end_quote
 
-Verk let that sink in, while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
+Verk let that sink in while staring tearfully above the heads of the audience. He had paused mid-gesture with his arms to his side and palms upward.
 
 The audience considered this for a while and waited for the next cue from their lecturer. Verk slowly lowered and relaxed his arms, and then dramatically rest his chin on his chest, looking at the dais.
 
 The audience rightly guessed that this concluded his talk, and so cheered "reverently" as best they could.
 
-"Please think long and hard on this my dear people, as though your lives depend upon it. Now /who's ready for some thistle bread with ambling-feast icing!?/"
+"Please think long and hard on this my dear cavepeople; as though your lives depend upon it. Now /who's ready for some thistle bread with ambling-feast[fn:: Mammoth.] icing!?/"
 
 Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
 
