--- a/gog.org
+++ b/gog.org
@@ -297,7 +297,7 @@ The audience rightly guessed that this concluded his talk, and so cheered "rever
 
 "Please think long and hard on this my dear cavepeople; as though your lives depend upon it. Now /who's ready for some thistle bread with ambling-feast[fn:: Mammoth.] icing!?/"
 
-Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
+Cries of excitement and joy erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
 
 Verk stood, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning, before Verk's arrival.
 
