--- a/gog.org
+++ b/gog.org
@@ -303,7 +303,9 @@ Verk stood, still center-stage on the dais, nodding and smiling to the people as
 
 There was snatching of food and grunting, like that seen at a modern wedding reception.
 
-Verk's gaze caught Grav as he sauntered into the meal burrow. Grav had his usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
+Verk's gaze caught Grav as he sauntered into the meal burrow. Grav had his usual nonchalance about him and was unimpressed both with Verk's words and his passion. The words were confused and poorly connected. The passion added nothing. They sounded good to most of the audience, but Grav felt that if one had scratched all that out using neutral language, others would see his point. He did a lot of scratching.
+
+He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
 
 Grav looked back, looked forward at the meal-burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hoped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Grav across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
 
