--- a/gog.org
+++ b/gog.org
@@ -333,7 +333,7 @@ He slapped Verk's bare shoulder with his clean hand. "I will see /you/ at club-d
 
 Thinking that he should acknowledge so that all in the burrow could hear, since the question was asked in such a way he loudly said, "Oh! Yes Father-Brother Verk! I will be there!". He could feel his lips quivering.
 
-"Very well!", Verk turned and left with a smile that swept the burrow. All were looking in his direction.
+"Very well!", Verk turned and left with a smile that swept the burrow. All eyes in the crowded, now silent burrow were on Verk and Grav.
 
 Grav affected a casualness as he finished and casually made his way out of the crowded relief-burrow.
 
