--- a/gog.org
+++ b/gog.org
@@ -337,7 +337,7 @@ Thinking that he should acknowledge so that all in the burrow could hear, since 
 
 Grav affected a casualness as he finished and casually made his way out of the crowded relief-burrow.
 
-Grav now had yet-more, unwelcome thoughts to anxiously dwell upon. This sounded like a declaration of war straight from soldier Verk. /Though not having been stirred by Verk's earlier words, I have been deeply shaken by these/, he thought.
+Grav now had yet-more, unwelcome thoughts to anxiously dwell upon. This sounded like a declaration of war straight from soldier Verk.
 
 "What in the /Forest/ was that about?", he mouthed. If nothing else, he needed sleep.
 \clearpage
