--- a/gog.org
+++ b/gog.org
@@ -25,11 +25,11 @@ Modern humans are as unaware about the gaps in their historical knowledge as jus
 
 We moderns congratulate ourselves on knowing so very much about ancient cultures. We went to a lot of trouble to figure all this out, after all. These are only a small sliver of the reality of what has come and gone; just here on plain old Earth.
 
-We don't /know/ if extraterrestrials exit, but most who have an opinion seem to be pretty confident that they are awesome if they're out there.
+Modern humans don't /know/ that extraterrestrials exit, but most who have an opinion seem to be pretty confident that they are awesome if they're out there.
 
 It's trivial to make the case that we don't know /all/ that has happened here on Earth. It's not much harder to make the case that the gaps are likely many times greater than what we know, or at least think we know.
 
-Therefore, we can be confident that there are cultures of the past that have come and gone, about which we would be utterly fascinated were we able to really /know/ about them. We know in /actuality/ that they are "out there" somewhere in unrecorded history. They can be considered "the aliens we know of".
+Therefore we can be confident that there are cultures of the past that have come and gone, about which we would be utterly fascinated were we able to really /know/ about them. We know in /actuality/ that they are "out there" somewhere in unrecorded history. They can be considered "the aliens we know of".
 
 Consider just this: We know of multiple ancient human settlements hundreds of kilometers from land and under many meters of water, so much has our geography changed in recent history[fn:: Let's say: 15,000 years ago or longer.].
 
