--- a/gog.org
+++ b/gog.org
@@ -1690,7 +1690,7 @@ They faced each other and stared.
 
 "What.", is all Gog said as his red eyes darted about.
 
-"You've got 'gog' in your eye, scout.", said Grav helpfully with the horse voice of an elderly silver back@@comment:OOo, I just discovered inline comments. I don't like this sentence. Hi. Ma!@@. He was repacking both of their kits, forgetting about the remains of Gog's lamp, except for the wick, which was perfectly fine, and also rather new.
+"You've got 'gog' in your eye, scout.", said Grav helpfully. He was repacking both of their kits, forgetting about the remains of Gog's lamp, except for the wick, which was perfectly fine, and also rather new.
 
 Grav was smiling and bobbing his head. "Let's just talk about it later. We need to move."
 
