--- a/gog.org
+++ b/gog.org
@@ -1700,7 +1700,7 @@ The best way to deal with tooth-cats was to avoid them, of course. If that fails
 
 Be pokey. Cats hate nothing more than something that is both obviously delicious and pokey.
 
-Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two cleverly wielded spears may as well be all-finger or more. The cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
+Two men[fn:: Women were discouraged from involvement. So long as it was just one cat two men did the job, if barely. A coordinated attack involving more than one cat was rare, but a real horror show when it happened.] with sharp spears, nothing fancy, could fend off a tooth-cat a good 9 out of 10 times. Two cleverly wielded spears may as well be all-finger or more. A cat, while gigantic and ferocious, was not going to make any progress and just tire everyone out. They knew this too and so sauntered off eventually, maybe the slightly stupider ones with bloody paws.
 
 A very strong and skilled single man, if also lucky, could wield a spear in each hand and fend off a tooth-cat.
 
